@@ -1057,9 +1057,11 @@ name|a
 return|;
 block|}
 return|return
-name|Bytes
+name|this
 operator|.
-name|compareTo
+name|rawcomparator
+operator|.
+name|compareRows
 argument_list|(
 name|a
 argument_list|,
@@ -1228,9 +1230,11 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|Bytes
+name|this
 operator|.
-name|compareTo
+name|rawcomparator
+operator|.
+name|compareRows
 argument_list|(
 name|itKey
 operator|.
@@ -2001,9 +2005,11 @@ operator|.
 name|isEmpty
 argument_list|()
 operator|&&
-name|Bytes
+name|this
 operator|.
-name|compareTo
+name|rawcomparator
+operator|.
+name|compareRows
 argument_list|(
 name|tailMap
 operator|.
@@ -2060,9 +2066,11 @@ name|found_key
 operator|==
 literal|null
 operator|||
-name|Bytes
+name|this
 operator|.
-name|compareTo
+name|rawcomparator
+operator|.
+name|compareRows
 argument_list|(
 name|found_key
 operator|.
@@ -2086,9 +2094,11 @@ argument_list|()
 expr_stmt|;
 if|if
 condition|(
-name|Bytes
+name|this
 operator|.
-name|compareTo
+name|rawcomparator
+operator|.
+name|compareRows
 argument_list|(
 name|found_key
 operator|.
